--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
         </script>
         <div class="gcse-search"></div>
     </body>
-    <div class="footer">clyonsdev 2022</footer>
+    <div class="footer"><a href="https://github.com/CLyonsDev" target="_blank">clyonsdev 2022</a></div>
 </html>
