Link Back to FactorioBin

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
         </script>
         <div class="gcse-search"></div>
     </body>
-    <div class="footer"><a href="https://github.com/CLyonsDev" target="_blank">clyonsdev 2022</a></div>
+    <div class="footer"><a href="https://github.com/CLyonsDev" target="_blank"><u>clyonsdev 2022</u></a> • Search Results From <a href="https://factoriobin.com/" target="_blank"><u>FactorioBin</u></a></div>
 </html>
