--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>FactorioBin Search - Find Blueprints on FactorioBin</title>
+        <title>Search FactorioBin - Find Blueprints on FactorioBin</title>
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
-        <a href="index.html"><h1 id="SiteHeader">FactorioBin Search</h1></a>
+        <a href="index.html"><h1 id="SiteHeader">Search FactorioBin</h1></a>
         <script async src="https://cse.google.com/cse.js?cx=626cf6346cfbd4de4">
         </script>
         <div class="gcse-search"></div>
