--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Search FactorioBin - Find Blueprints on FactorioBin</title>
         <link rel="stylesheet" href="styles/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
         <a href="index.html"><h1 id="SiteHeader">Search FactorioBin</h1></a>
