--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Search FactorioBin - Find Blueprints on FactorioBin</title>
         <link rel="stylesheet" href="styles/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="Easily search for blueprints on FactorioBin"/>
     </head>
     <body>
         <a href="index.html"><h1 id="SiteHeader">Search FactorioBin</h1></a>
