--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Easily search for blueprints hosted on FactorioBin"/>
     </head>
     <body>
-        <a href="index.html"><h1 id="SiteHeader">Search FactorioBin</h1></a>
+        <a href="http://www.searchfactoriobin.com/"><h1 id="SiteHeader">Search FactorioBin</h1></a>
         <script async src="https://cse.google.com/cse.js?cx=626cf6346cfbd4de4">
         </script>
         <div class="gcse-search"></div>
