--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Search FactorioBin - Find Blueprints on FactorioBin</title>
+        <title>Search FactorioBin - Easily Find Blueprints!</title>
         <link rel="stylesheet" href="styles/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Easily search for blueprints hosted on FactorioBin"/>
