--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
         <meta name="description" content="Easily search for blueprints hosted on FactorioBin"/>
     </head>
     <body>
-        <a href="http://www.searchfactoriobin.com/"><h1 id="SiteHeader">Search FactorioBin</h1></a>
-        <script async src="https://cse.google.com/cse.js?cx=626cf6346cfbd4de4">
-        </script>
-        <div class="gcse-search"></div>
+        <div id="page-container">
+            <div id="content-wrap">
+                <a href="http://www.searchfactoriobin.com/"><h1 id="SiteHeader">Search FactorioBin</h1></a>
+                <script async src="https://cse.google.com/cse.js?cx=626cf6346cfbd4de4"></script>
+                <div class="gcse-search"></div>
+            </div>
+            <footer id="footer"><a href="https://github.com/CLyonsDev" target="_blank"><u>clyonsdev 2022</u></a> • Search Results From <a href="https://factoriobin.com/" target="_blank"><u>FactorioBin</u></a></footer>
+        </div>
     </body>
-    <div class="footer"><a href="https://github.com/CLyonsDev" target="_blank"><u>clyonsdev 2022</u></a> • Search Results From <a href="https://factoriobin.com/" target="_blank"><u>FactorioBin</u></a></div>
 </html>
