--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Search FactorioBin - Easily Find Blueprints!</title>
+        <title>Search FactorioBin - Find Blueprints!</title>
         <link rel="stylesheet" href="styles/style.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Easily search for blueprints hosted on FactorioBin"/>
     </head>
